[package]
name = "comstar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
ignore = "0.4.20"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json", "gzip", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
structopt = "0.3.26"
url = { version = "2.3.1", features = ["serde"] }
