[package]
name = "comstar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.26"
google-cloud-default = { version = "0.1.0", features = ["storage"] }
google-cloud-storage = "0.9.0"
ignore = "0.4.20"
indicatif = { version = "0.17.3", features = ["tokio", "improved_unicode"] }
path-slash = "0.2.1"
relative-path = { version = "1.7.3", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["stream", "json", "gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
structopt = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37" }
url = { version = "2.3.1", features = ["serde"] }

